Fix: added limit in search response